# reflect-kb

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CODEOWNERS  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
docs/: dashboard-endpoint-spec.md
schemas/: frontmatter.schema.json
scripts/: validate_frontmatter.py
src/reflect_kb/: __init__.py  dashboard.py  metrics.py  metrics_stats.py  write_flow.py
src/reflect_kb/cli/: entity_store.py  graph_engine.py  graspologic_shim.py  learnings_cli.py  main.py  metrics_cli.py  requirements.txt  team.py
src/reflect_kb/hooks/: session_start_recall.py
src/reflect_kb/recall/: recall.py
tests/: test_dashboard.py  test_frontmatter_schema.py  test_metrics.py  test_metrics_stats.py  test_team_cli.py  test_validate_frontmatter_script.py  test_write_flow.py
tests/fixtures/: metrics_sample.jsonl
tests/samples/: invalid-missing-confidence.md  tokio-runtime-nested-panic.md
