[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "reflect-kb"
version = "0.0.0"
description = "Universal cross-harness retrieval + learning KB for AI coding agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Steven Gonsalvez" },
]
keywords = [
    "ai",
    "agents",
    "claude-code",
    "codex",
    "copilot",
    "graphrag",
    "retrieval",
    "knowledge-base",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
# Runtime deps for the CLI + retrieval stack. nano-graphrag itself must be
# installed with --no-deps (broken transitive chain through graspologic/hyppo/
# numba/llvmlite on Python 3.11+) — Nix and pipx install scripts handle that
# out-of-band. Everything here is the subset we actually import.
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "tiktoken>=0.5.0",
    "nano-vectordb",
    # nano-graphrag import-time deps we satisfy manually (since we install it
    # with --no-deps). Schema/migration work lands in later phases.
    "openai>=1.0",
    "tenacity>=8.0",
    "hnswlib>=0.7.0",
    "xxhash>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
reflect = "reflect_kb.cli.main:main"

[project.urls]
Homepage = "https://github.com/stevengonsalvez/reflect-kb"
Issues = "https://github.com/stevengonsalvez/reflect-kb/issues"
Specification = "https://github.com/stevengonsalvez/ai-coder-rules/blob/main/plans/reflect-v4-universal-install-spec.md"

[tool.hatch.build.targets.wheel]
packages = ["src/reflect_kb"]

[tool.ruff]
line-length = 100
target-version = "py311"
